Fix the extra margin on first line of all codeblocks
and some bad markdown

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -208,7 +208,6 @@ html.breakpoint-tablet .nav-list {
 }
 
 pre code {
-    margin-left: 20px;
     white-space: pre-wrap;
 }
 
